Realised all functionality. Refactored reflection. Encapsulated bot into separate class. Created Schedule class and WorkDay enum.

--- a/ScheduleTelegramBot/ScheduleTelegramBot.csproj
+++ b/ScheduleTelegramBot/ScheduleTelegramBot.csproj
@@ -9,4 +9,8 @@
       <PackageReference Include="Telegram.Bot" Version="14.11.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="TelegramBotToken" />
+    </ItemGroup>
+
 </Project>
