--- a/ScheduleTelegramBot/App.config
+++ b/ScheduleTelegramBot/App.config
@@ -3,7 +3,7 @@
     <connectionStrings>
         <add name="Postgres"
              providerName="Npgsql"
-             connectionString="Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"/>
+             connectionString="Server=db;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"/>
     </connectionStrings>
     <appSettings>
         <add key="ApiAccessToken" value="Paste your API-access-token instead of this string." />
